<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Compass</string>
    <string name="app_name_res">Values Res</string>
    <string name="north">North</string>
    <string name="northeast">Northeast</string>
    <string name="east">East</string>
    <string name="southeast">Southeast</string>
    <string name="south">South</string>
    <string name="southwest">Southwest</string>
    <string name="west">West</string>
    <string name="northwest">Northwest</string>
    <string name="accuracy_prompt">The near magnetic interference, around shaking the phone calibrate the compass</string>
    <string name="adjust">adjust</string>
    <string name="adjust_firstIn">First use of calibration compasses \n please according to the above diagram around eight shake mobile phone calibration compasses</string>
    <string name="adjust_tv">Nearby there may be magnetic interference, follow the above schematic shaking the phone around 8 characters calibrate the compass.</string>
    <string name="adjust_success">adjust success.</string>
    <string name="adjust_value">The current precision value: </string>
    <string name="adjust_compass">adjust compass</string>
    <string name="has_clicked">has been clicked</string>
    <string name="hac_selected">has been selected</string>
    <string name="progress_show">show</string>
    <string name="progress_hide">hide</string>
    <string name="hello">Hello World,ValuesResTest!</string>
    <string name="c1">F00</string>
    <string name="c2">0F0</string>
    <string name="c3">00F</string>
    <string name="c4">0FF</string>
    <string name="c5">F0F</string>
    <string name="c6">FF0</string>
    <string name="c7">07F</string>
    <string name="c8">70F</string>
    <string name="c9">F70</string>
    <string name="list_01">list1_1</string>
    <string name="list_02">list1_2</string>
    <string name="list_11">list2_1</string>
    <string name="list_12">list2_2</string>
    <string name="list_21">list3_1</string>
    <string name="list_22">list3_2</string>
    <string name="other_test_name">Other test</string>
    <string name="image_content">Algerhe test mm content</string>
    <string name="btn_send">send msg</string>
    <string name="btn_cancel">cancel msg</string>
    <string name="str_start_game">Start Game</string>
    <string name="str_touch_me">Touch Me</string>
    <string name="str_pro_setting">programe setting</string>
    <string name="str_pro_setting_describle">programe item setting</string>
    <string name="app_expand_name">app expand</string>
    <string name="app_prefer_name">app prefer</string>
    <string name="str_input_name">input name</string>
    <string name="str_input_name_disc">input name pls</string>
    <string name="str_input_name_config">Your name:</string>
    <string name="str_gender">gender</string>
    <string name="str_gender_sel">select your gender</string>
    <string name="str_sys_set">system setting group</string>
    <string name="str_auto_save">auto save </string>
    <string name="str_auto_on">auto save:on</string>
    <string name="str_auto_off">auto save :off</string>
    <string name="str_person_set">personal info</string>
    <string name="str_ring_set">set ring</string>
    <string name="str_ring_sel">select ring</string>
    <string name="str_light_group">light back group</string>
    <string name="str_light_strength">light strength</string>
    <string name="str_light_sel">select light</string>
    <string name="str_light_sel_dialog">select light dialogue</string>
    <string name="str_word_display_group">text display</string>
    <string name="str_auto_scroll">auto scroll</string>
    <string name="str_auto_scroll_on">auto scroll:on</string>
    <string name="str_auto_scroll_off">auto scroll:off</string>
    <string name="str_set_item">set item</string>
    <string name="str_interface_item_set">interface set</string>
    <string name="str_interface_disc">interface set describe</string>
    <string name="str_use_intent">use intent</string>
    <string name="str_start_activity">start Activity</string>
    <string name="app_selectbook_name">start Activity</string>
    <string name="str_lookup_contact">look up contact</string>
    <string name="btn_search">Search</string>
    <string name="str_color">Color</string>
    <string name="str_color_red">Red</string>
    <string name="str_color_green">Green</string>
    <string name="str_color_blue">Blue</string>
    <string name="str_width">Width</string>
    <string name="str_width_1">Width 1</string>
    <string name="str_width_3">Width 3</string>
    <string name="str_width_5">Width 5</string>
    <string name="str_blur">Blur</string>
    <string name="str_emboss">Emboss</string>
    <string name="str_btn_read">read</string>
    <string name="str_btn_write">write</string>
    <string name="str_btn_read_sdcard">Read SD</string>
    <string name="str_btn_home">Up To Home</string>
    <string name="str_btn_writedb">write db</string>
    <string name="str_btn_insert">insert</string>
    <string name="str_btn_search">search</string>
    <string name="str_find_word">Find word</string>
    <string name="str_word_detail">word means</string>
    <string name="str_btn_entry_dict">entry dict</string>
    <string name="dict_word_title">input word</string>
    <string name="dict_detail_title">input detail</string>
    <string name="dict_key_title">input key</string>
    <string name="str_btn_contact_search">search phone</string>
    <string name="str_btn_contact_add">add phone</string>
    <string name="str_title_name">input name：</string>
    <string name="str_title_phone">input phone：</string>
    <string name="str_title_email">input email：</string>
    <string name="str_btn_send">gesture flip</string>
    <string name="str_btn_start">start</string>
    <string name="str_btn_stop">stop</string>
    <string name="str_btn_bind">bind service</string>
    <string name="str_btn_unbind">unbind service</string>
    <string name="str_btn_getservice">get service status</string>
    <string name="str_start_service">service about</string>
    <string name="str_start_my_service">start normal service</string>
    <string name="str_start_myintent_service">start Intent service</string>
    <string name="str_get_service_status">get remote service status</string>
    <string name="str_get_color_title">get color</string>
    <string name="str_get_weight_title">get weight</string>
    <string name="str_systemservice">get system service</string>
    <string name="str_manager_block">manager block</string>
    <string name="str_get_blocklist">get manager block</string>
    <string name="str_send_msg">send message</string>
    <string name="str_number">number:</string>
    <string name="str_content">content:</string>
    <string name="str_service_play">play</string>
    <string name="str_service_stop">stop</string>
    <string name="str_service_mute">mute</string>
    <string name="str_service_up">up</string>
    <string name="str_service_down">down</string>
    <string name="str_service_on">on</string>
    <string name="str_service_off">off</string>
    <string name="str_service_settime">set time</string>
    <string name="str_service_changewallpaper">set time</string>
    <string name="str_service_stopwallpaper">set time</string>
    <string name="str_send_broadcast">send broadcast</string>
    <string name="str_broadcast">broadcast message</string>
    <string name="str_send_order_broadcast">send order broadcast</string>
    <string name="str_music_next">next</string>
    <string name="str_music_prev">prev</string>
    <string name="str_mediaplayer">media player</string>
    <string name="str_mediarecorder">media recorder</string>
    <string name="str_record_play">play</string>
    <string name="str_record_stop">stop</string>
    <string name="str_cameramain">camera</string>
    <string name="str_recordvideo">record video</string>
    <string name="app_livewallpaper_name">run wall</string>
    <string name="str_widget_test">test widget</string>
    <string name="str_mysql">look up sql</string>
    <string name="str_result_mysql">no result</string>
    <string name="str_special_code_toast">recieve 123789</string>
    <string name="str_page">this is %1$s ye,and %2$s zhang</string>
    <string name="str_dialog_ok">OK</string>
    <string name="str_dialog_cancel">Cancel</string>
    <string name="str_btn_test">Test</string>
    <string name="str_test_promp">Test Activity</string>
    <string name="str_test_input_name">Enter Name:</string>
    <string name="str_input_promp">Your Input is:</string>
    <string name="str_input_content">No Content input</string>
    <string name="str_test_title">Test Title</string>
    <string name="str_usagestats_title">Usage Stats Title</string>    
    <string name="str_btn_test">Usage Stats</string>

    <string name="str_name_edit_promp">Input Name:</string>
    <string name="str_age_edit_promp">Input Age:</string>
    <string name="str_height_edit_promp">Input Height:</string>
    <string name="str_id_edit_promp">Input Id:</string>

    <string name="str_btn_add">add</string>
    <string name="str_btn_queryAll">queryAll</string>
    <string name="str_btn_clear">clear</string>
    <string name="str_btn_del">del</string>
    <string name="str_btn_query">query</string>
    <string name="str_btn_deleteAll">deleteAll</string>
    <string name="str_btn_update">update</string>
    <string name="str_btn_people_provider">people provider</string>

    <string name="str_unknow">unknow string</string>

    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <string name="usage_time_label">Usage time</string>

    
    <string name="str_package_name">package name</string>
    <string name="str_launch_count">launch count</string>
    <string name="str_usage_time">usage time</string>
    <string name="str_usage_stats_label">Usage statistics</string>
    <string name="str_btn_usagestats">Usage statistics</string>

    
    <string name="str_title_fragment">fragment test</string>
    <string name="str_btn_fragment">fragment</string>
    <string name="str_content_fragment1">This is fragment 1</string>
    <string name="str_content_fragment2">This is fragment 2</string>

    <string name="str_content_message">message</string>
    <string name="str_content_contacts">contact</string>
    <string name="str_content_news">news</string>
    <string name="str_content_setting">settings</string>

    <string name="str_tab_message">message</string>
    <string name="str_tab_contacts">contact</string>
    <string name="str_tab_news">news</string>
    <string name="str_tab_setting">settings</string>

</resources>