<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.lewa.crazychapter11.PreferenceActivityTest$Prefs1Fragment"
        android:icon="@drawable/ic_settings_applications"
        android:summary="@string/str_set_item"
        android:title="@string/str_pro_setting" />
    <header
        android:fragment="com.lewa.crazychapter11.PreferenceActivityTest$Prefs2Fragment"
        android:icon="@drawable/ic_settings_display"
        android:summary="@string/str_interface_disc"
        android:title="@string/str_interface_item_set" >
        <extra
            android:name="website"
            android:value="www.crazy.org" />
    </header>
    <header
        android:icon="@drawable/ic_setting_display"
        android:summary="@string/str_start_activity"
        android:title="@string/str_use_intent" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://www.baidu.com" />
    </header>

</preference-headers>