<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:crazyit="http://schemas.android.com/apk/res/com.lewa.crazychapter11"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!--
         <ImageView
        android:id="@+id/gesture_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mm01"
         />
    -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_service_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_start" />

        <Button
            android:id="@+id/btn_service_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/service_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_bind" />

        <Button
            android:id="@+id/service_unbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_unbind" />

        <Button
            android:id="@+id/service_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_getservice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_my_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_start_my_service" />

        <Button
            android:id="@+id/btn_myintent_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_start_myintent_service" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_get_service_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_get_service_status" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/get_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_get_color_title" />

        <EditText
            android:id="@+id/edit_get_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/contact_right_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/get_weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_get_weight_title" />

        <EditText
            android:id="@+id/edit_get_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/contact_right_margin" />
    </LinearLayout>

</LinearLayout>