<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <TextView
                android:id="@+id/tv_promp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_test_promp" />

    <Button
            android:id="@+id/btn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_test" />
    
    <TextView
                android:id="@+id/tv_input_promp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_input_promp" />

    <TextView
                android:id="@+id/tv_input_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_input_content" />

</LinearLayout>