<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:id="@+id/widget28"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:id="@+id/nameMessage"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/str_test_input_name">
  </TextView>
  <EditText
    android:id="@+id/nameEditText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp">
  </EditText>
  <LinearLayout
    android:id="@+id/buttonLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <Button
     android:id="@+id/okButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/str_dialog_ok">
    </Button>
    <Button
       android:id="@+id/cancelButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/str_dialog_cancel">
    </Button>
    </LinearLayout>
</LinearLayout>